Created BookStore appl

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /.vs
+/BookStoreApp/.vs/BookStoreApp
+/BookStoreApp/BookStoreApp/bin/Debug/netcoreapp3.1
+/BookStoreApp/BookStoreApp/obj
